--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script>
         // Objekt mit den Pfaden und zugehörigen Zieladressen
         const redirects = {
-            "link1": "https://example1.com",
+            "link1": "https://play.famobi.com/cannon-balls-3d",
             "link2": "https://example2.com",
             "link3": "https://example3.com"
         };
